Implementation of the Komis_motoryzacjajny.h and .cpp file, NieznanyPojazdException.h and .cpp file and the ui window

--- a/Komis_motoryzacyjny/Komis_motoryzacyjny.ui
+++ b/Komis_motoryzacyjny/Komis_motoryzacyjny.ui
@@ -1,28 +1,118 @@
-<UI version="4.0" >
- <class>Komis_motoryzacyjnyClass</class>
- <widget class="QMainWindow" name="Komis_motoryzacyjnyClass" >
-  <property name="objectName" >
-   <string notr="true">Komis_motoryzacyjnyClass</string>
-  </property>
-  <property name="geometry" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
+ <class>Komis_motoryzacyjny</class>
+ <widget class="QMainWindow" name="Komis_motoryzacyjny">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>400</height>
+    <width>729</width>
+    <height>413</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Komis_motoryzacyjny</string>
-  </property>  <widget class="QMenuBar" name="menuBar" />
-  <widget class="QToolBar" name="mainToolBar" />
-  <widget class="QWidget" name="centralWidget" />
-  <widget class="QStatusBar" name="statusBar" />
+  </property>
+  <widget class="QWidget" name="centralWidget">
+   <widget class="QPushButton" name="btnDodaj">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>20</y>
+      <width>101</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Dodaj Pojazd</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnSprzedaj">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>60</y>
+      <width>101</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Sprzedaj pojazd</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnZapisz">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>100</y>
+      <width>101</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Zapisz pojazd</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnWczytaj">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>140</y>
+      <width>101</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Wczytaj pojazd</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnSortuj">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>180</y>
+      <width>101</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Sortuj pojazdy</string>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="listWidget">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>20</y>
+      <width>601</width>
+      <height>251</height>
+     </rect>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>729</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QToolBar" name="mainToolBar">
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+  </widget>
+  <widget class="QStatusBar" name="statusBar"/>
  </widget>
- <layoutDefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
+ <layoutdefault spacing="6" margin="11"/>
  <resources>
-   <include location="Komis_motoryzacyjny.qrc"/>
+  <include location="Komis_motoryzacyjny.qrc"/>
  </resources>
  <connections/>
-</UI>
+</ui>
